- add support for the DNS-over-HTTPS - add new record types - code cleanup